<resources>
    <string name="app_name">Beauty_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Начать</string>
    <string name="follow_the_directions">Следуйте указаниям, чтобы\nстать частью нашей семьи</string>
    <string name="vn_skin">VIN SKIN</string>
    <string name="welcome_to">Добро\nпожаловать в</string>
    <string name="top_screen_text">VIN Skin</string>
    <string name="you_are_with_us">Ура, вы с нами!</string>
    <string name="log_in_requirement">Прежде чем записаться на\nуслуги, войдите в аккаунт</string>
    <string name="log_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="please_enter_a_phone_number">Пожалуйста, введите номер, чтобы подтвердить вход</string>
    <string name="hi">Привет,</string>
    <string name="client_name">Лолита</string>
    <string name="find">Найти</string>
    <string name="brand">Бренд:</string>
    <string name="rating">Рейтинг:</string>
    <string name="currency_symbol">$</string>
    <string name="link">Ссылка:</string>
    <string name="search_history_is_empty">В истории поиска пока пусто</string>
    <string name="clear_history">Очистить историю</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="network_error">Ошибка сети</string>
    <string name="dark_theme">Темная тема</string>
    <string name="recomended">Рекомендовано</string>
    <string name="purchases">Покупки</string>
    <string name="masters">Мастера</string>
    <string name="appointments">Ближайшие записи</string>
    <string name="veronika">с Вероникой</string>
    <string name="gubki">Консультация для губок</string>
    <string name="_19_n">19\nОкт</string>
    <string name="wednesday">Вторник, 12:00</string>
    <string name="additional">Доп</string>
    <string name="Services">Услуги</string>
    <string name="login_header">Войти</string>
    <string name="enter_login_and_password">Введите свой логин и пароль</string>
    <string name="login_data">Логин</string>
    <string name="enter_login">Введите логин</string>
    <string name="email">Email</string>
    <string name="enter_email">Введите email</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="continue_text">Продолжить</string>
    <string name="registration_success">Регистрация успешна!</string>
    <string name="something_went_wrong">Что то пошло не так :(</string>
</resources>