<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    tools:context=".ui.AuthorizationFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_gl"
        app:layout_constraintGuide_begin="26dp"
        android:orientation="vertical"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_gl"
        app:layout_constraintGuide_end="26sp"
        android:orientation="vertical"
        />
    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        style="@style/bold_title_text_appearance"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/top_header"
        android:text="@string/login_header" />
    <TextView
        android:id="@+id/top_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/top_screen_text_appearance"
        android:text="@string/top_screen_text"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:text="@string/enter_login_and_password"
        android:gravity="start"
        android:textSize="16sp"
        style="@style/small_grey_text_appearance"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_top"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:text="@string/login_data"
        android:gravity="start"
        android:textSize="16sp"
        style="@style/small_grey_text_appearance"/>

    <EditText
        android:id="@+id/login_et"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/form_states"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/enter_login"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/almost_black"
        android:textColorHint="@color/semidark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/right_gl"
        app:layout_constraintStart_toStartOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/login_top" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_top"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/login_et"
        android:layout_marginTop="13dp"
        android:layout_marginStart="4dp"
        android:text="@string/email"
        android:gravity="start"
        android:textSize="16sp"
        style="@style/small_grey_text_appearance"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/form_states"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/enter_email"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/almost_black"
        android:textColorHint="@color/semidark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/right_gl"
        app:layout_constraintStart_toStartOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/email_top" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_top"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        android:layout_marginTop="13dp"
        android:layout_marginStart="4dp"
        android:text="@string/password"
        android:gravity="start"
        android:textSize="16sp"
        style="@style/small_grey_text_appearance"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/form_states"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/enter_password"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/almost_black"
        android:textColorHint="@color/semidark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/right_gl"
        app:layout_constraintStart_toStartOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/password_top" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/lightest_brown"
        android:paddingHorizontal="83dp"
        style="@style/rounded_button_style"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@id/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingHorizontal="57dp"
        style="@style/rounded_button_style"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_rectangle"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_arrow"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_goneMarginTop="37dp"
        android:id="@+id/already_have_an_account"
        app:layout_constraintStart_toEndOf="@id/left_gl"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/right_gl"
        android:layout_marginTop="13dp"
        android:layout_marginStart="4dp"
        android:text="@string/already_have_an_account"
        android:gravity="center"
        android:textSize="18sp"
        style="@style/small_grey_text_appearance"/>


</androidx.constraintlayout.widget.ConstraintLayout>