<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    tools:context=".ui.WelcomeFragment">
    <ImageView
        android:id="@+id/background_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_shape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/top_screen_text_appearance"
        android:text="@string/top_screen_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.45"
        android:src="@drawable/welcome_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background_shape"
        app:layout_constraintTop_toTopOf="@id/background_shape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/night_mode_switch"
        android:text="@string/dark_theme"
        android:fontFamily="@font/raleway_bold"
        app:thumbTint="?attr/colorSwitchThumbNormal"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:trackTint="?attr/colorSurface"
        android:textSize="20sp"
        android:textColor="?attr/colorOnPrimary"
        android:lineHeight="19sp"
        android:paddingStart="16dp"
        android:paddingEnd="6dp"
        android:layout_gravity="start"
        android:paddingHorizontal="10dp"
        app:switchPadding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="64dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/bold_title_text_appearance"
        android:text="@string/welcome_to"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/app_title"/>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/vn_skin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/follow_the_directions_textview"
        android:fontFamily="@font/raleway_bold"
        android:textSize="32sp"
        android:textColor="@color/lightest_brown"/>
    <TextView
        android:id="@+id/follow_the_directions_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        android:layout_marginBottom="15dp"
        android:text="@string/follow_the_directions"
        android:gravity="center"
        android:textAppearance="@style/small_grey_text_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        style="@style/rounded_button_style"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_rectangle"/>



</androidx.constraintlayout.widget.ConstraintLayout>