<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SearchFragment">

    <TextView
        android:id="@+id/top_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/top_screen_text_appearance"
        android:text="@string/top_screen_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_header"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/hamburger_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hamburger"
            android:layout_marginStart="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/hi"
            android:textSize="24sp"
            android:layout_marginStart="7dp"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@color/lightest_brown"
            android:text="@string/client_name"
            android:textSize="24sp"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/search_et"
        android:textSize="14sp"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/almost_black"
        android:drawableStart="@drawable/search_icon"
        android:drawablePadding="10dp"
        android:singleLine="true"
        android:paddingHorizontal="12dp"
        android:hint="@string/find"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/semidark_gray"
        android:background="@drawable/search_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_history_button"
        app:layout_constraintTop_toBottomOf="@id/header_layout"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/search_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_history_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/search_et"
        app:layout_constraintTop_toTopOf="@id/search_et"
        android:padding="20dp"
        android:layout_marginEnd="20dp" />
    <ProgressBar
        android:id="@+id/loading_pb"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/lightest_brown"
        app:layout_constraintTop_toBottomOf="@id/search_et"
        android:layout_marginTop="150dp"/>


    <ImageView
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/search_et"
        app:layout_constraintTop_toTopOf="@id/search_et"
        app:layout_constraintBottom_toBottomOf="@id/search_et"
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:src="@drawable/clear_icon"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        tools:visibility="visible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_et"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/search_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"/>
    <TextView
        android:id="@+id/empty_results_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emoji_iv"
        android:drawablePadding="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="40dp"
        android:textAppearance="@style/bold_title_text_appearance"
        android:text="@string/nothing_found" />
    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/emoji_iv"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/nails"
        app:layout_constraintStart_toEndOf="@id/empty_results_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/empty_results_tv"
        app:layout_constraintTop_toTopOf="@id/empty_results_tv"/>
    <TextView
        android:id="@+id/network_error_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emoji_error_iv"
        android:drawablePadding="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="40dp"
        android:textAppearance="@style/bold_title_text_appearance"
        android:text="@string/network_error" />
    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/emoji_error_iv"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toEndOf="@id/network_error_tv"
        android:background="@drawable/anguish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/network_error_tv"
        app:layout_constraintTop_toTopOf="@id/network_error_tv"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/not_working_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_et">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_rv"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:orientation="horizontal"
            tools:listitem="@layout/images_item_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <com.google.android.material.tabs.TabLayout
            android:layout_marginVertical="21dp"
            android:layout_marginHorizontal="24dp"
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/colorPrimary"
            app:tabBackground="@drawable/indicator_bg"
            app:tabPadding="0dp"
            app:tabIndicator="@null"
            app:tabIndicatorColor="?attr/colorOnPrimary"
            app:tabIndicatorFullWidth="true"
            app:tabTextAppearance="@style/tab_bar_text_style"
            app:tabTextColor="?attr/colorOnPrimary">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomended"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchases"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masters"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="115dp">
            <TextView
                android:id="@+id/appointment_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/appointments"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/gray_square"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/square"
                app:layout_constraintBottom_toBottomOf="@id/square"
                app:layout_constraintStart_toStartOf="@id/square"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/gray_rectangle_background"
                android:layout_marginEnd="30dp"/>
            <TextView
                android:id="@+id/appointment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/square"
                android:text="@string/gubki"
                app:layout_constraintTop_toTopOf="@id/square"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"/>
            <TextView
                android:id="@+id/appointment_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/square"
                android:text="@string/veronika"
                app:layout_constraintTop_toBottomOf="@id/appointment_title"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="12sp"
                android:textColor="@color/semidark_gray"/>
            <TextView
                android:id="@+id/appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/square"
                android:text="@string/wednesday"
                app:layout_constraintTop_toBottomOf="@id/appointment_subtitle"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/raleway_bold"
                android:textSize="18sp"
                android:textColor="?attr/colorOnPrimary"/>
            <TextView
                android:id="@+id/additional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/gray_square"
                android:text="@string/additional"
                app:layout_constraintTop_toTopOf="@id/appointment_subtitle"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/raleway_bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"/>
            <ImageView
                android:id="@+id/square"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintStart_toStartOf="@id/appointment_header"
                app:layout_constraintTop_toBottomOf="@id/appointment_header"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_rectangle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19_n"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                app:layout_constraintTop_toTopOf="@id/square"
                app:layout_constraintStart_toStartOf="@id/square"
                app:layout_constraintEnd_toEndOf="@id/square"
                app:layout_constraintBottom_toBottomOf="@id/square"
                android:textColor="@color/white"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Services"
            android:textSize="18sp"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="26dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/services_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="13dp"
            tools:listitem="@layout/service_list_item"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>